samples/_failures_safe/1761170139_b3f83a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1326899c.c: In function ‘main’:
./samples/SAFE/__tmp_1326899c.c:164:12: error: missing terminating " character
  164 |     printf("Available events: 0=START
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1326899c.c:164:5: error: expected expression at end of input
  164 |     printf("Available events: 0=START
      |     ^~~~~~
./samples/SAFE/__tmp_1326899c.c:164:5: error: expected declaration or statement at end of input
